# uds_protocol

./: .gitignore  .mergify.yml  .pre-commit-config.yaml  .typos.toml  CHANGELOG.md  Cargo.toml  Makefile  README  README.md  deny.toml  make.bat  pyproject.toml  release.toml
.config/: nextest.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug.yml  epic.yml  task.yml
.github/workflows/: ci.yml  main.yml  publish.yml  release.yml
docs/: codec-sharp-edges.md  conf.py  index.rst  library_specification.rst
docs/superpowers/plans/: 2026-06-01-no-std-api-alignment.md  2026-06-03-api-consistency-phase2.md  2026-06-03-api-exposure-and-consistency-phase1.md  2026-06-08-api-interrogation.md
docs/superpowers/specs/: 2026-06-01-no-std-api-alignment-design.md  2026-06-03-api-consistency-phase2-design.md  2026-06-03-api-exposure-and-consistency-design.md  2026-06-08-api-interrogation-resolutions-design.md
fuzz/: Cargo.toml  build.rs
fuzz/fuzz_targets/: fuzz_request_decode.rs  fuzz_response_decode.rs  fuzz_roundtrip.rs
src/: error.rs  identifier.rs  lib.rs  protocol_definitions.rs  request.rs  response.rs  service.rs  test_util.rs  traits.rs
src/common/: active_diagnostic_session.rs  bcd_4_byte.rs  communication_control_type.rs  communication_type.rs  data_identifier.rs  diagnostic_identifier.rs  diagnostic_payload.rs  diagnostic_session_type.rs  dtc_ext_data.rs  dtc_snapshot.rs  dtc_status.rs  format_identifiers.rs  mod.rs  negative_response_code.rs  primitive_generics.rs  reset_type.rs  security_access_type.rs  session_type.rs  suppressable_positive_response.rs  transfer_request_parameter.rs  util.rs
src/dtc/: ext_data.rs  mod.rs  snapshot.rs  status.rs
src/request/: communication_control.rs  control_dtc_settings.rs  diagnostic_session_control.rs  ecu_reset.rs  read_data_by_identifier.rs  request_download.rs  routine_control.rs  transfer_data.rs  write_data_by_identifier.rs
src/services/: clear_dtc_information.rs  communication_control.rs  control_dtc_settings.rs  diagnostic_session_control.rs  ecu_reset.rs  mod.rs  negative_response.rs  read_data_by_identifier.rs  read_dtc_information.rs  request_download.rs  request_file_transfer.rs  request_transfer_exit.rs  routine_control.rs  security_access.rs  tester_present.rs  transfer_data.rs  write_data_by_identifier.rs
src/shared/: diagnostic_identifier.rs  format_identifiers.rs  mod.rs  primitive_generics.rs  util.rs
supply-chain/: config.toml
uds_protocol_derive/: Cargo.toml  README.md
uds_protocol_derive/src/: lib.rs
