[package]
name = "uds_protocol"
description = "A library for encoding and decoding UDS (ISO 14229) messages"
version = "0.0.1"
edition = "2024"
license = "MIT OR Apache-2.0"
repository = "https://github.com/luminartech/uds_protocol"
authors = [
    "Justin Kovacich<justin.kovacich@luminartech.com>",
    "Kimberly Kryger <kim.kryger@luminartech.com>",
    "Matthew Beisser <matthew.beisser@luminartech.com>",
    "Parth Patel <parth.patel@luminartech.com>",
    "Zachary Heylmun <zachary.heylmun@luminartech.com>",
]

[features]
serde = ["dep:serde"]
utoipa = ["dep:utoipa"]
clap = ["dep:clap"]

[dependencies]
uds_protocol_derive = { path = "./uds_protocol_derive", version = "0.0.1" }
byteorder = "1"
thiserror = "2"
# Optional dependencies
tracing = "0.1"
serde_bytes = "0.11"
static_assertions = "1"
bitmask-enum = "2"
serde = { version = "1", optional = true, features = ["derive"] }
utoipa = { version = "5", optional = true }
clap = { version = "4", optional = true, features = ["derive"] }
