[package]
name = "uds_protocol"
description = "A library for encoding and decoding UDS (ISO 14229) messages"
version = "0.1.0"
edition = "2024"
rust-version = "1.85.0"
license = "MIT OR Apache-2.0"
repository = "https://github.com/luminartech/uds_protocol"
homepage = "https://github.com/luminartech/uds_protocol"
documentation = "https://docs.rs/uds_protocol"
keywords = ["uds", "iso-14229", "automotive", "diagnostics", "obd"]
categories = ["encoding", "embedded", "hardware-support"]
authors = [
    "Justin Kovacich <justin_kovacich@microvision.com>",
    "Kimberly Kryger <kim_kryger@microvision.com>",
    "Matthew Beisser <matthew_beisser@microvision.com>",
    "Parth Patel <parth_patel@microvision.com>",
    "Zachary Heylmun <zachary_heylmun@microvision.com>",
]

[features]
default = ["std"]
std = ["alloc", "embedded-io/std", "thiserror/std"]
alloc = ["embedded-io/alloc"]
serde = ["dep:serde", "dep:serde_bytes"]
utoipa = ["dep:utoipa"]
clap = ["dep:clap"]

[dependencies]
automotive-wire-codec = { version = "0.2", default-features = false }
bitmask-enum = "2"
embedded-io = { version = "0.7", default-features = false }
thiserror = { version = "2", default-features = false }
# Optional dependencies
serde = { version = "1", optional = true, features = ["derive"] }
serde_bytes = { version = "0.11", optional = true }
utoipa = { version = "5", optional = true }
clap = { version = "4", optional = true, features = ["derive"] }

[dev-dependencies]
proptest = "1"
