[package]
name = "uds_protocol_derive"
version = "0.0.1"
edition = "2024"
license = "MIT OR Apache-2.0"
repository = "https://github.com/luminartech/uds_protocol"
authors = [
"Kimberly Kryger <kim.kryger@luminartech.com>",
"Zachary Heylmun <zachary.heylmun@luminartech.com>", ]

[lib]
name = "uds_protocol_derive"
proc-macro = true

[dependencies]
proc-macro2 = { version="1", features = ["proc-macro"] }
quote = "1"
syn = "2"

[features]
default = []
