[package]
name = "uds_protocol_derive"
description = "Procedural macros for easier implementation of UDS protocol traits"
version = "0.1.0"
edition = "2024"
rust-version = "1.85.0"
license = "MIT OR Apache-2.0"
repository = "https://github.com/luminartech/uds_protocol"
homepage = "https://github.com/luminartech/uds_protocol"
documentation = "https://docs.rs/uds_protocol_derive"
keywords = ["uds", "iso-14229", "automotive", "diagnostics", "derive"]
categories = ["development-tools::procedural-macro-helpers"]
authors = [
"Kimberly Kryger <kim.kryger@luminartech.com>",
"Zachary Heylmun <zachary.heylmun@luminartech.com>", ]

[lib]
name = "uds_protocol_derive"
proc-macro = true

[dependencies]
proc-macro2 = { version="1", features = ["proc-macro"] }
quote = "1"
syn = "2"
