[package]
name = "uds_protocol_derive"
description = "Procedural macros for easier implementation of UDS protocol traits"
version = "0.0.2"
edition = "2024"
license = "MIT OR Apache-2.0"
repository = "https://github.com/luminartech/uds_protocol"
authors = [
"Kimberly Kryger <kim.kryger@luminartech.com>",
"Zachary Heylmun <zachary.heylmun@luminartech.com>", ]

[lib]
name = "uds_protocol_derive"
proc-macro = true

[dependencies]
proc-macro2 = { version="1", features = ["proc-macro"] }
quote = "1"
syn = "2"

# Dev-deps only — used by the doctest examples in `src/lib.rs`. The
# crate is a dependency of `uds_protocol`, so depending back on
# `uds_protocol` here forms a *logical* cycle, but cargo permits this
# because dev-deps are only resolved when building *this crate's own*
# tests, not when something else consumes the proc-macro. Same pattern
# `serde_derive` uses to dev-dep `serde`.
[dev-dependencies]
uds_protocol = { path = ".." }
